--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-router-dom": "^6.26.0",
     "redux": "^5.0.1",
     "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.5"
+    "semantic-ui-react": "^3.0.0-beta.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.6",
